User init makefile Mac host support

--- a/user/init/Makefile
+++ b/user/init/Makefile
@@ -1,6 +1,8 @@
-CC=gcc -c -m32 -g -mgeneral-regs-only -std=gnu99 -ffreestanding -fno-pie -Wall -Wextra -static-libgcc -O2
-LD=gcc -m32 -fno-pic -Wl,-static -Wl,-Bsymbolic -nostartfiles -nostdlib -ffreestanding
+CC=gcc
+LD=gcc
+CCFLAGS=-c -m32 -g -mgeneral-regs-only -std=gnu99 -ffreestanding -fno-pie -Wall -Wextra -static-libgcc -O2
+LDFLAGS=-m32 -fno-pic -Wl,-static -Wl,-Bsymbolic -nostartfiles -nostdlib -ffreestanding
 
 build:
-	$(CC) main.c -o main.o
-	$(LD) -T linker.ld main.o -o init
+	$(CC) $(CCFLAGS) main.c -o main.o
+	$(LD) $(LDFLAGS) -T linker.ld main.o -o init
